# hevcasm

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  Makefile.am  README.md  configure.ac  get-intel-sde  hevcasm.sln
src/lib/: CMakeLists.txt  Jit.h  Makefile.am  diff.c  diff.cpp  diff.h  diff_a.asm  diff_a.h  hadamard.c  hadamard.cpp  hadamard.h  hadamard2.cpp  hadamard_a.asm  hevcasm.c  hevcasm.cpp  hevcasm.h  hevcasm.vcxproj  hevcasm.vcxproj.filters  hevcasm_base.c  hevcasm_base.h  hevcasm_dll.vcxproj  hevcasm_dll.vcxproj.filters  hevcasm_test.c  hevcasm_test.cpp  hevcasm_test.h  hevcasm_vc12.vcxproj  hevcasm_vc14.vcxproj  instrset.asm  pred_inter.c  pred_inter.cpp  pred_inter.h  pred_inter_a.asm  pred_inter_a.h  pred_intra.c  pred_intra.cpp  pred_intra.h  predict_inter_a.asm  prediction_inter.c  quantize.c  quantize.cpp  (+19 more)
src/lib/f265/: LICENSE.txt  Makefile.am  Makefile.in  README.txt  dct.asm  encode.asm  intra.asm  pixel.asm  x86inc.asm
src/lib/libvpx/config/gcc/: vp9_rtcd.h  vpx_config.asm
src/lib/libvpx/config/msvs/Win32/: vpx_config.asm
src/lib/libvpx/config/msvs/x64/: vpx_config.asm
